--- a/uploads/test/index.html
+++ b/uploads/test/index.html
@@ -1,4 +1,4 @@
 <video width="320" height="240" controls>
-  <source src="/videofiles/testvideo.mp4" type="video/mp4">
+  <source src="/videofiles/testvideo.wmv" type="video/wmv">
 Your browser does not support the video tag.
 </video>
